--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         <!-- 底部固定区域 -->
         <div class="layui-footer">
-            底部固定区域
+            点击数字,或者使用alt+数字复制验证码
         </div>
         <!-- 底部固定区域 -->
     </div>
