--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
     <script src="./js/otpauth.js"></script>
     <script src="./js/jsQR.js"></script>
 
-    // 渲染列表数据
+    <!--  渲染列表数据 -->
     <script id="item" type="text/html">
         <%#  if(d.length === 0){ %>
         <div style="padding: 15px;">           
